@@ -1,4 +1,5 @@
 Changes relative to tre-0.20:
+  * Fixed(?) base64 functions.
   * Fixed =-REF.
   * Set *ASSERT?* to T by default.
   * Moved external modules back in.  Their separate
